# ml-core

./: Cargo.toml  README.md  fix-structure.sh
crates/attention-primitives/: Cargo.toml
crates/attention-primitives/src/: lib.rs
crates/autodiff-core/: Cargo.toml
crates/autodiff-core/src/: lib.rs
crates/embedding-core/: Cargo.toml
crates/embedding-core/src/: lib.rs
crates/linear-layers/: Cargo.toml
crates/linear-layers/src/: lib.rs
crates/lstm-primitives/: Cargo.toml
crates/lstm-primitives/src/: lib.rs
crates/nn-framework/: Cargo.toml
crates/nn-framework/src/: lib.rs
crates/optimizer-core/: Cargo.toml
crates/optimizer-core/src/: lib.rs
crates/rnn-primitives/: Cargo.toml
crates/rnn-primitives/src/: lib.rs
crates/tensor-core/: Cargo.toml
crates/tensor-core/src/: lib.rs
crates/text-primitives/: Cargo.toml
crates/text-primitives/src/: lib.rs
examples/char-rnn/: Cargo.toml
examples/char-rnn/src/: main.rs
examples/mini-transformer/: Cargo.toml
examples/mini-transformer/src/: main.rs
examples/standalone-tensor/: Cargo.toml
examples/standalone-tensor/src/: main.rs
examples/text-classifier/: Cargo.toml
examples/text-classifier/src/: main.rs
frameworks/mini-torch/: Cargo.toml
frameworks/mini-torch/src/: main.rs
frameworks/rusty-llm/: Cargo.toml
frameworks/rusty-llm/src/: main.rs
